[gd_scene load_steps=5 format=2]

[ext_resource path="res://subscenes/players/add_player.gd" type="Script" id=1]
[ext_resource path="res://subscenes/players/race_selector.tscn" type="PackedScene" id=2]
[ext_resource path="res://themes_fonts/default_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/folder-button.png" type="Texture2D" id=4]

[node name="NewPlayer" type="Window"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 30.0
offset_right = -10.0
offset_bottom = -10.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="Columns" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2

[node name="Col1" type="VBoxContainer" parent="Columns"]
offset_right = 630.0
offset_bottom = 960.0
size_flags_horizontal = 3

[node name="Name" type="HSplitContainer" parent="Columns/Col1"]
offset_right = 457.0
offset_bottom = 46.0
size_flags_horizontal = 0

[node name="Label" type="Label" parent="Columns/Col1/Name"]
offset_top = 5.0
offset_right = 95.0
offset_bottom = 41.0
text = "Name:"

[node name="LineEdit" type="LineEdit" parent="Columns/Col1/Name"]
offset_left = 107.0
offset_right = 457.0
offset_bottom = 46.0
custom_minimum_size = Vector2( 350, 0 )
placeholder_text = "Enter the player name"
caret_blink = true
caret_blink_interval = 0.5

[node name="Label" type="Label" parent="Columns/Col1"]
offset_top = 50.0
offset_right = 630.0
offset_bottom = 86.0
text = "Avatar"

[node name="Avatar" type="TextureButton" parent="Columns/Col1"]
offset_top = 90.0
offset_right = 630.0
offset_bottom = 346.0
texture_normal = ExtResource( 4 )

[node name="Map" type="HSplitContainer" parent="Columns/Col1"]
offset_top = 350.0
offset_right = 630.0
offset_bottom = 392.0

[node name="Label" type="Label" parent="Columns/Col1/Map"]
offset_top = 3.0
offset_right = 142.0
offset_bottom = 39.0
text = "Map veto:"

[node name="OptionButton" type="OptionButton" parent="Columns/Col1/Map"]
offset_left = 154.0
offset_right = 630.0
offset_bottom = 42.0

[node name="Col2" type="VBoxContainer" parent="Columns"]
offset_left = 634.0
offset_right = 1265.0
offset_bottom = 960.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="Columns/Col2"]
offset_right = 631.0
offset_bottom = 36.0
text = "Race picks"

[node name="RacePicks" type="VBoxContainer" parent="Columns/Col2"]
offset_top = 40.0
offset_right = 41.0
offset_bottom = 82.0
size_flags_horizontal = 0

[node name="DefaultRace" parent="Columns/Col2/RacePicks" instance=ExtResource( 2 )]
offset_right = 41.0
offset_bottom = 42.0

[node name="Col3" type="VBoxContainer" parent="Columns"]
offset_left = 1269.0
offset_right = 1900.0
offset_bottom = 960.0
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="Columns/Col3"]
offset_right = 631.0
offset_bottom = 36.0
text = "Previous results"

[node name="VersusInputs" type="VBoxContainer" parent="Columns/Col3"]
offset_top = 40.0
offset_bottom = 40.0
size_flags_horizontal = 0

[node name="Buttons" type="HSplitContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -350.0
offset_top = -50.0
offset_right = -10.0
offset_bottom = -10.0

[node name="CancelButton" type="Button" parent="Buttons"]
offset_right = 112.0
offset_bottom = 42.0
text = "Cancel"

[node name="SaveButton" type="Button" parent="Buttons"]
offset_left = 124.0
offset_right = 340.0
offset_bottom = 42.0
text = "Add Player"

[node name="FileDialog" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 20.0
offset_right = -10.0
offset_bottom = -10.0
custom_minimum_size = Vector2( 150, 52.5 )
window_title = "Open a File"
mode = 0
access = 2
filters = PackedStringArray( "*.png", "*.jpg", "*.jpeg" )

[connection signal="text_changed" from="Columns/Col1/Name/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="Columns/Col1/Avatar" to="." method="_on_Avatar_pressed"]
[connection signal="pressed" from="Buttons/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="Buttons/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="popup_hide" from="FileDialog" to="." method="_on_FileDialog_popup_hide"]
